detailled instructions in README, fix CMakeLists and add CDFFConfig

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,19 +25,20 @@ set(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} "${CDFF_ROOT_DIR}/${BUNDLED_DEPENDE
 set(CMAKE_MODULE_PATH "${CDFF_ROOT_DIR}/${BUNDLED_DEPENDENCIES_PREFIX}/share/cmake-3.11.4/Modules")
 
 #finding necessary libraries to run VisualSlam and StereoMotionEstimation
-find_package(MotionEstimation REQUIRED PATHS /home/abeauvisage/Documents/uasl_VINS_fusion/uasl_motion_estimation/share/MotionEstimation)
-find_package(OpenCV 3 REQUIRED ${OPENCV_CONFIG_FILE})
-find_package(yaml-cpp REQUIRED ${YAML_CPP_CONFIG_FILE})
+find_package(MotionEstimation REQUIRED PATHS ${UASL_MOTION_ESTIMATION_CONFIG_PATH})
+find_package(OpenCV 3.4 REQUIRED ${OPENCV_CONFIG_PATH})
+find_package(yaml-cpp REQUIRED ${YAML_CPP_CONFIG_PATH})
 find_package(CDFF REQUIRED PATHS ${CDFF_INSTALL}/share/cmake) #find only a tiny portion of CDFF libraries because install script is incomplete
-find_package(Pangolin REQUIRED ${PANGOLIN_CONFIG_FILE})
+#LibOrbSlam dependencies needs to be found again because of shitty cmake script from CDFF
+find_package(Pangolin REQUIRED PATHS ${CDFF_ROOT_DIR}/External/install/lib/cmake/Pangolin)
 find_package(LIBORBSLAM REQUIRED PATHS ${CDFF_ROOT_DIR}/build/Common/Core/liborbslam/)
-find_package(DBoW2 REQUIRED PATHS ${CDFF_ROOT_DIR}/build/Common/Core/liborbslam/modules)
-find_package(g2o REQUIRED PATHS ${CDFF_ROOT_DIR}/build/Common/Core/liborbslam/modules)
+find_package(DBoW2 REQUIRED PATHS ${CDFF_ROOT_DIR}/build/Common/Core/liborbslam/modules/DBoW2/lib)
+find_package(g2o REQUIRED PATHS ${CDFF_ROOT_DIR}/build/Common/Core/liborbslam/modules/g2o/lib)
 
 set(LIBVISO_DIR "/home/abeauvisage/catkin_ws/devel/share/libviso2/cmake")
 find_package(libviso2 PATHS ${LIBVISO_DIR})
 
-set(COMMON_LIBRARIES ${YAML_CPP_LIBRARIES} ${MotionEstimation_LIBRARIES} ${OpenCV_LIBRARIES})
+set(COMMON_LIBRARIES ${MotionEstimation_LIBRARIES} ${YAML_CPP_LIBRARIES} ${OpenCV_LIBRARIES})
 
 # including missing libraries from CDFF and necessary to run
 message("looking for lib in ${CDFF_ROOT_DIR}/build/DFNs/StereoMotionEstimation}")
@@ -47,8 +48,8 @@ find_library(DFPC_SLAM cdff_dfpc_visual_slam_stereo PATHS ${CDFF_ROOT_DIR}/build
 #find_library(DFN_BUILDER libdfns_builder.a PATHS ${CDFF_ROOT_DIR}/build/DFNs)
 find_library(STEREOVO cdff_dfn_stereo_motion_estimation PATHS ${CDFF_ROOT_DIR}/build/DFNs/StereoMotionEstimation)
 
-list(APPEND DFN_SLAM ${DBow2_LIBRARIES} ${g2o_LIBRARIES} ${LIBORBSLAM_LIBRARIES})
-list(APPEND DFPC_SLAM ${DBow2_LIBRARIES} ${g2o_LIBRARIES} ${LIBORBSLAM_LIBRARIES})
+set(DFN_SLAM_LIBRARIES ${DFN_SLAM} ${LIBORBSLAM_LIBRARIES} ${LIBORBSLAM_LIBRARIES}) #LIBORBSLAM_LIBRARIES needs to be included twice (because of reversed order from cdff)
+set(DFPC_SLAM_LIBRARIES ${DFPC_SLAM} ${LIBORBSLAM_LIBRARIES} ${LIBORBSLAM_LIBRARIES})
 
 find_package(Ceres 1)
 find_package(Edres-Wrapper)
@@ -61,11 +62,11 @@ endif(Ceres_FOUND AND Edres-Wrapper_FOUND)
 
 #test DFN OrbSLAM
 add_executable(stereo_dfn_slam_test src/main_orbslam.cpp include/asnconversion.hpp src/asnconversion.cpp)
-target_link_libraries(stereo_dfn_slam_test ${DFN_SLAM} ${CDFF_LIBRARIES} ${COMMON_LIBRARIES})
+target_link_libraries(stereo_dfn_slam_test ${DFN_SLAM_LIBRARIES} ${CDFF_LIBRARIES} ${COMMON_LIBRARIES})
 
 # test DFPC VisualSLAM
-add_executable(stereo_dfpc_slam_test src/main_visualslam.cpp include/asnconversion.hpp src/asnconversion.cpp)
-target_link_libraries(stereo_dfpc_slam_test ${DFPC_SLAM} ${Edres-Wrapper_LIBRARIES} ${CDFF_LIBRARIES} ${COMMON_LIBRARIES})
+#add_executable(stereo_dfpc_slam_test src/main_visualslam.cpp include/asnconversion.hpp src/asnconversion.cpp)
+#target_link_libraries(stereo_dfpc_slam_test ${DFPC_SLAM_LIBRARIES} ${Edres-Wrapper_LIBRARIES} ${COMMON_LIBRARIES} ${CDFF_LIBRARIES})
 
 # test feature tracking
 if(TRACKING_LIBRARIES AND Ceres_FOUND)
@@ -91,4 +92,5 @@ include_directories(
     ${LIBORBSLAM_INCLUDE_DIRS}
 		${TRACKING_INCLUDE_DIRS}
     ${libviso2_INCLUDE_DIRS}
+		${Pangolin_INCLUDE_DIRS}
 )
